# Iridium

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.app  Dockerfile.nginx  Dockerfile.worker  README.md  add_is_archived_column.py  alembic.ini  cleanup_test.py  debug_latest_job.py  debug_orgs.py  docker-compose.yml  list_orgs.py  nginx.conf  pyproject.toml  test_create_ext_org.py  verify_fix.py  verify_superadmin_link.py
alembic/: env.py
alembic/versions/: de6089c10ce4_initial_schema_for_gog_integration.py
app/: create_superuser.py  initial_data.py  main.py
app/api/: dependencies.py
app/api/endpoints/: admin.py  attendance.py  auth.py  conversions.py  dashboard.py  employees.py  linked_organizations.py  mappings.py  organizations.py  pages.py  sheets.py  templates.py  users.py
app/api/schemas/: admin.py  auth.py  dashboard.py  job.py  mapping.py  organization.py  template.py
app/core/: config.py  email.py  import_config.py  security.py
app/core/services/: admin_service.py  analysis_service.py  dashboard_service.py  employee_service.py  job_service.py  mapping_service.py  organization_service.py  template_service.py  user_service.py
app/db/: models.py  session.py  types.py
app/infrastructure/: celery_app.py  erpnext_client.py  tasks.py
app/schemas/: employee.py  organization.py  user.py
frontend/static/: job_detail.js  style.css
frontend/templates/: admin_center.html  check_attendance.html  dashboard_base.html  employees.html  home.html  initial_setup.html  job_configure.html  job_detail.html  job_history.html  job_map_employees.html  jobs_list.html  login.html  minimal.html  organization.html  organizations.html  register.html  settings.html  sheet_maker.html  upload.html  verify_email.html
scripts/: start.sh
