[tool.poetry]
name = "iridium"
version = "0.1.0"
description = "A data conversion and processing platform."
authors = ["Your Name <you@example.com>"] # <-- UPDATE THIS LINE
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Web Framework & Server
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"

# Database (SQLAlchemy ORM)
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.3" # For database migrations

# Async Task Queue
celery = "^5.2.7"
redis = "^4.5.4"

# Authentication & Security
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# Configuration Management
pydantic = {extras = ["email"], version = "^1.10.7"}

# Data Processing Libraries (add more as needed)
pandas = "^2.0.0"
openpyxl = "^3.1.2" # For .xlsx support with pandas

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
httpx = "^0.24.0" # For async testing of the API

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
